components/y3sps914f-python/base/service.yaml
apiVersion: v1
kind: Service
metadata: 
  labels: 
    app.kubernetes.io/instance: y3sps914f-python
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: y3sps914f-python 
  name: y3sps914f-python
spec:
  ports:
  - port: 8081 
    targetPort: 8081 
  selector:
    app.kubernetes.io/instance: y3sps914f-python
