components/y3sps914f-python/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata: 
  labels: 
    app.kubernetes.io/instance: y3sps914f-python
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: y3sps914f-python 
  name: y3sps914f-python
spec:
  port:
    targetPort: 8081 
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: y3sps914f-python
    weight: 100
